test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/1_type/function/MISSING_RETURN_VALUE.t
function f():int32
{
    @static_test { expect_message={ level="LEVEL_ERROR", id="MISSING_RETURN_VALUE", parameters={ type="int32" } } }
    return;
}
